feat: Add favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <meta name="description" content="Local map project detailing Park Slope">
     <meta name="author" content="Calvin Brownlee">
-    <link rel="shortcut icon" type="image/png" href="img/flag.png">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
     <title>Map Project</title>
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
